--- a/_news/2024-news3.md
+++ b/_news/2024-news3.md
@@ -1,9 +1,8 @@
 ---
-title: >-
-"We roll out new entries for our non-profit E-Learing platform: <strong>TheHub Digital Academy</strong>"
+title: "We roll out new entries for our non-profit E-Learing platform: <strong>TheHub Digital Academy</strong>"
 <div>
-    <img data-src="{{ site.data.profile.portrait_url | relative_url }}" class="lazy w-100 rounded" src="{{ '/assets/images/badges/TheHub.png' | relative_url }}">
+<a href="https://www.linkedin.com/posts/thehub-digital-academy_education-eabrlearning-cybersecurity-activity-7251617650370383872-qoXw?utm_source=share&utm_medium=member_desktop" target="_blank">Read more <i class="fas fa-angle-double-right"></i></a>
 </div>
-    <a href="https://www.linkedin.com/posts/thehub-digital-academy_education-eabrlearning-cybersecurity-activity-7251617650370383872-qoXw?utm_source=share&utm_medium=member_desktop" target="_blank">Read more <i class="fas fa-angle-double-right"></i></a>
+cover:          /assets/images/badges/TheHub.png
 date: 2024-10-16 20:45:00 -0400
 ---
