--- a/_news/2024-news3.md
+++ b/_news/2024-news3.md
@@ -1,5 +1,5 @@
 ---
-title: "We roll out new entries for our non-profit E-Learing platform: <strong>TheHub Digital Academy</strong>"
+title: "We roll out new student entries for our non-profit E-Learning platform: <strong>TheHub Digital Academy</strong>"
 
 cover:          /assets/images/badges/TheHub.png
 date: 2024-10-16 20:45:00 -0400
