--- a/_publications/2024/2025Feb.md
+++ b/_publications/2024/2025Feb.md
@@ -1,1 +1,15 @@
+---
+title:          "ViKey: Secure Door Access Control Using Passive Visible Light Tags"
+date:           2025-02-20
+selected:       true
+pub_pre:        "Submitted to Nature 2025"
+pub_last:       ' <span class="badge badge-pill badge-publication badge-success">Spotlight</span>'
 
+abstract: >-
+  In this paper, we 
+cover:          /assets/images/badges/nature.png
+authors:
+  - Justice Owusu Agyemang
+  - Gloria Graham
+  - Hasky Egyeri Fynn
+---
