--- a/_publications/2024/2025Feb.md
+++ b/_publications/2024/2025Feb.md
@@ -1,15 +1,19 @@
 ---
-title:          "Iwheel"
+title:          "Rethinking Intelligent Wheelchair Technologies: Challenges, Gaps, and Pathways to the Future"
 date:           2025-02-20
 selected:       true
 pub_pre:        "Submitted to Nature 2025"
 pub_last:       ' <span class="badge badge-pill badge-publication badge-success">Spotlight</span>'
 
 abstract: >-
-  In this paper, we 
+  The development of intelligent wheelchairs has enhanced the quality of life of people with physical challenges through mobility and autonomy. These improvements can be beneficial to a large number of people. However, based on the the current wheelchair technologies, there are still some problems in terms of affordability, adaptability and most importantly, the user's needs and preferences. This is especially so for the disadvantaged populations in regions with constrained resources. In this review, the new developments in intelligent wheelchair systems about the robotic, sensing, and control systems are presented.
 cover:          /assets/images/badges/nature.png
 authors:
   - Justice Owusu Agyemang
-  - Gloria Graham
+  - Jerry John Kponyo
+  - Gabriel Awumee Selorm
+  - Gloria Edumaba Graham
   - Hasky Egyeri Fynn
+  - Dickson Marfo Fosu
+  - Clement Heanampong
 ---
